Move badge between cells

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,12 @@ h2.headline {
   gap: 10px;
 }
 
+.box > .grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
 .box:hover {
   cursor: pointer;
 }
