Moving people to support cell will now add them to target board. Added colored badges

--- a/styles/style.css
+++ b/styles/style.css
@@ -168,3 +168,7 @@ h2.headline {
 .board-badge.active {
   border-color: var(--color-cyan);
 }
+
+.board-badge > .department {
+  font-weight: bold;
+}
